fixed intertia scrolling broken on mobile safari

--- a/public/master.css
+++ b/public/master.css
@@ -406,6 +406,7 @@ body {
   height: calc(100vh - 50px);
   overflow-y: scroll;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 .ContentContainer.Active {
   z-index: 800;
@@ -975,6 +976,7 @@ input:focus {
   position: fixed;
   overflow: hidden;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   left: 0;
   top: 0;
   z-index: 9999;
