--- a/src/_styles/base.styl
+++ b/src/_styles/base.styl
@@ -30,6 +30,7 @@ body {
   height: calc(100vh - 50px);
   overflow-y: scroll;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 } 
 .ContentContainer.Active {
   z-index: 800;
