--- a/src/_styles/overlays.styl
+++ b/src/_styles/overlays.styl
@@ -4,7 +4,8 @@
   background: white;
   position: fixed;
   overflow: hidden;
-  overflow-y:scroll;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   left: 0;
   top: 0;
   z-index: 9999;
